--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </script>
 
     <!-- DITTO -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
+    <link rel="stylesheet" href="css/ditto.css">
     <script src="js/ditto.js"></script>
 </head>
 <body>
